# Pixen

./: .antigravityignore  .claudeignore  .env.example  .eslintrc.json  .geminiignore  .gitattributes  .gitignore  .prettierrc.json  .solis-version  bootstrap.sh  index.html  justfile  package-lock.json  package.json  solis-deploy.sh  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.agent/context/: api-reference.md  architecture.md  data-model.md  glossary.md  tech-stack.md
.agent/memory/: active-context.md  decisions-log.md  findings.md  known-issues.md  phase-1-notes.md  progress.md  task-plan.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  lint.yml  release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  PHASE_5_COMPLETE.md  PROJECT_ROADMAP.md  SPEC.md
docs/archive/: PHASE-0-COMPLETION.md  PHASE-1-COMPLETION.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_5_COMPLETE.md  PHASE_5_HANDOFF.md  PHASE_5_TEST_PLAN.md
docs/checklists/: phase-completion.md  pre-deploy.md  security-review.md
docs/decisions/: ADR-000-template.md  ADR-001-frontend-framework.md  ADR-002-processing-engine.md  ADR-003-ai-inference.md  ADR-004-desktop-framework.md  ADR-005-hosting.md  ADR-006-distribution.md
public/: _headers  index.html  manifest.json
scripts/: build-web.mjs
site/: DESIGN_SYSTEM.md  SITEMAP.md  SITE_BRIEF.md
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
(+48 files in other folders)
